--- a/index.html
+++ b/index.html
@@ -1,8 +1,25 @@
 <html>
     <head>
-        <title>Ampliación del reto - Nombre Apellido1 Apellido2</title>
+        <title>Ampliación del reto - Jon Ibarrola Pulido</title>
         <link rel="stylesheet" href="estilos/estilos.css">
     </head>
     <body>
+        <h1>Quién es quién - Studio Ghibli</h1>
+
+        <div id="adivinar"></div>
+
+        <div id="grid" class="grid"></div>
+
+        <button onclick="resetearJuego()">Resetear Juego</button>
+
+        <script src="js/conseguirimagenes.js"></script>
+        <script src="js/generarImagenes.js"></script>
+        <script src="js/generarAdivinar.js"></script>
+        <script src="js/resetearJuego.js"></script>
+
+        <footer>
+            <div id="github-footer"></div>
+            <script src="js/apiGithub.js"></script>
+        </footer>
     </body>
 </html>
